[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/local_agents/configuration/ui/FlowTraversalConfig.gd" id="1_flow_ui"]

[node name="FlowTraversalConfig" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_flow_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="RootVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/RootVBox"]
layout_mode = 2
text = "Flow Traversal Tuning"

[node name="Grid" type="GridContainer" parent="MarginContainer/RootVBox"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="FlowWithSpeedBonusLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Flow with speed bonus"

[node name="FlowWithSpeedBonusSpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 2.0
value = 0.12

[node name="FlowAgainstSpeedPenaltyLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Flow against speed penalty"

[node name="FlowAgainstSpeedPenaltySpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 2.0
value = 0.3

[node name="CrossFlowSpeedPenaltyLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Cross-flow speed penalty"

[node name="CrossFlowSpeedPenaltySpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 2.0
value = 0.08

[node name="FlowEfficiencyBonusLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Flow with efficiency bonus"

[node name="FlowEfficiencyBonusSpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 1.0
value = 0.06

[node name="FlowEfficiencyPenaltyLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Flow against efficiency penalty"

[node name="FlowEfficiencyPenaltySpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 1.0
value = 0.14

[node name="ShallowWaterSpeedPenaltyLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Shallow water speed penalty"

[node name="ShallowWaterSpeedPenaltySpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 2.0
value = 0.33

[node name="FloodplainSpeedPenaltyLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Floodplain speed penalty"

[node name="FloodplainSpeedPenaltySpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 2.0
value = 0.25

[node name="SlopeSpeedPenaltyLabel" type="Label" parent="MarginContainer/RootVBox/Grid"]
layout_mode = 2
text = "Slope speed penalty"

[node name="SlopeSpeedPenaltySpinBox" type="SpinBox" parent="MarginContainer/RootVBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
max_value = 2.0
value = 0.48

[node name="ButtonsRow" type="HBoxContainer" parent="MarginContainer/RootVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SaveButton" type="Button" parent="MarginContainer/RootVBox/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="ReloadButton" type="Button" parent="MarginContainer/RootVBox/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reload"

[node name="ResetDefaultsButton" type="Button" parent="MarginContainer/RootVBox/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reset Defaults"

[node name="StatusLabel" type="Label" parent="MarginContainer/RootVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Not loaded"
